docs: README con evidencias de Selenium, Postman Runner y GitHub Actions